tests/ui/storage_class/runtime_descriptor_array_error.stderr
error: uniform_constant must use &RuntimeArray<T>, not &[T]
 --> $DIR/runtime_descriptor_array_error.rs:6:60
  |
6 | pub fn main(#[spirv(descriptor_set = 0, binding = 0)] one: &[Image!(2D, type=f32, sampled)]) {}
  |                                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

